--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
     "react-router-dom": "^7.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "tsparticles": "^3.6.0"
   },
   "devDependencies": {
