--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-particles": "^2.12.2",
     "react-router-dom": "^7.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-tilt": "^1.0.2",
     "tsparticles": "^3.6.0"
   },
   "devDependencies": {
