--- a/package.json
+++ b/package.json
@@ -1,47 +1,69 @@
 {
-  "name": "portafolio",
+  "name": "vs-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+   "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
+    
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@emailjs/browser": "^3.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@motionone/utils": "^10.15.1",
+    "@react-hook/window-size": "^3.1.1",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "dotenv": "^16.0.3",
+    "emailjs": "^4.0.2",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
-    "framer-motion": "^11.11.17",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-fast-marquee": "^1.6.5",
-    "react-particles": "^2.12.2",
-    "react-router-dom": "^7.0.1",
+    "framer-motion": "^10.11.2",
+    "gsap": "^3.11.5",
+    "localforage": "^1.10.0",
+    "lodash-move": "^1.1.1",
+    "match-sorter": "^6.3.1",
+    "normalize-wheel": "^1.0.1",
+    "pathseg": "^1.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
+    "react-globe.gl": "^2.24.1",
+    "react-intersection-observer": "^9.4.3",
+    "react-particles": "^2.9.3",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.10.0",
+    "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "react-tilt": "^1.0.2",
-    "tsparticles": "^3.6.0"
+    "react-tsparticles": "^2.9.3",
+    "react-use": "^17.4.0",
+    "sort-by": "^0.0.2",
+    "tailwindcss": "^3.3.1",
+    "tsparticles": "^2.9.3",
+    "vite": "^4.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "@types/react": "^18.0.28",
+    "eslint": "^8.42.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.2.0",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
-  }
+    "postcss": "^8.4.21"
+  },
+  "description": "",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
